--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 .hero-title {
     height: auto;
     position: absolute;
-    margin-top: -385px;
+    margin-top: -22%;
     text-align: center;
   }
   
@@ -29,9 +29,9 @@
   
   .search-property {
     width: 70%;
-    min-height: 104px;
+    min-height: 18%;
     position: absolute;
-    margin-top: -210px;
+    margin-top: -14%;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
@@ -68,126 +68,33 @@
 
 }
 
-
-/* pagination */
-#app {
-  height: 100%;
-}
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
+ul[role='navigation']{
   display: flex;
   justify-content: center;
-  align-items: center;
+  gap: 10px;
 }
+ul[role='navigation'] li{
+padding: 4px 10px;
+border-radius: 4px;
+border: 1px solid black;
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
-
-.swiper-pagination-bullet {
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  line-height: 20px;
-  font-size: 12px;
-  color: #000;
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.2);
-}
-
-.swiper-pagination-bullet-active {
-  color: #fff;
-  background: #007aff;
-}
-
-/* top -listing property */
-.card {
-  border-radius: 8px;
-  background-color: #FFF;
-  border: 2px solid #7065f0;
-  margin-bottom: 50px;
-}
-
-.card img {
-  height: 172px;
-  width: auto;
-  border-radius: 8px 8px 0 0;
-}
-
-
-
-.location {
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.details .rent {
-  font-size: 15px;
-  font-weight: 400;
-}
-
-.availability {
-  text-align: center;
-  color: #7065f0;
-}
-
-.view-btn {
-  border-radius: 3px;
-  text-align: center;
-  justify-content: center;
-  background-color: #7065f0;
+ul[role='navigation'] li.selected{
+  background-color: blue;
   color: white;
-  padding: 3px 40px;
+}
+ul[role='navigation'] li.disabled{
+  display: none;
 }
 
-.view-btn:hover {
-  background-color: white;
-  /* Green */
-  color: #7065f0;
-  border: 1px solid #7065f0;
-  transition: background-color 0.5s;
-}
 
-.top-listing-title p {
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 110%;
 
-  color: #000929;
 
-}
 
 @media screen and (max-width: 600px) {
-  .top-listing-title p {
+  .carousel .control-dots {
 
-    font-size: 25px;
+    display: none;
 
   }
 }
